--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "rootDir": ".",
     "target": "ES2020",
-    "module": "ESNext",
+    "module": "CommonJS",
     "declaration": true,
     "resolveJsonModule": true,
     "outDir": "dist",
